alb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # Public access
  name: my-ingress
spec:
  ingressClassName: alb # Will create Appliccation Load Balancer
  rules:
    - http:
        paths:
        - path: /nginx
          pathType: Prefix
          backend:
            service:
              name: app1-service
              port:
                number: 80
        - path: /apache
          pathType: Prefix
          backend:
            service:
              name: app2-service
              port:
                number: 80
